Revert "Remove hidden overflow to fix box shadow cut in ids-toolbar #852"
This reverts commit 8414640d6bb7a7a7519fdaa435bf17e5afd9c56f.

--- a/src/components/ids-toolbar/ids-toolbar-common.scss
+++ b/src/components/ids-toolbar/ids-toolbar-common.scss
@@ -64,6 +64,10 @@
 
 // These rules are applied to `ids-toolbar-section:host` elements
 @mixin ids-toolbar-section-host-size-styles() {
+  ::slotted(ids-toolbar-section:not([favor])) {
+    overflow: hidden;
+  }
+
   ::slotted(ids-toolbar-section:not([type])) {
     flex: 0 0 auto;
   }
